--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@vitejs/plugin-legacy": "^5.1.0",
     "eslint": "^8.55.0",
     "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-compat": "^4.2.0",
     "prettier": "^3.3.1",
     "vitest": "^1.5.0",
     "jsdom": "^24.0.0",
